# vscode_ws

pkg/test_log/: demo.cpp
pkg/test_opencv/: CMakeLists.txt  package.xml
pkg/test_opencv/src/: opencv_test.cc
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: listener.launch  talker.launch
src/beginner_tutorials/src/: listener.cpp  talker.cpp  test_code.cpp  test_glog.cc
src/learning_tf2/: CMakeLists.txt  package.xml
src/learning_tf2/launch/: start_demo.launch
src/learning_tf2/src/: test_quat.cpp  turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
src/scout_description/: CMakeLists.txt  package.xml
src/scout_description/launch/: scout_description.launch
src/scout_description/urdf/: nucros_scout.urdf
src/test_carto/: CMakeLists.txt  package.xml
src/test_carto/src/: test_code.cc  test_rigid.cc
src/test_ceres/: CMakeLists.txt  package.xml
src/test_ceres/src/: hello_ceres.cc  powell.cc  test_ceres.cc
