<?xml version="1.0"?>
<package>
  <name>scout_description</name>
  <version>0.0.1</version>
  <description>
    URDF description for the scout
  </description>

  <maintainer email="lixiang2@nuctech.com">Jane Doe</maintainer>

  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

 
  <export>
  </export>
</package>
